--- a/src/content/posts/guide/加入群聊.md
+++ b/src/content/posts/guide/加入群聊.md
@@ -6,7 +6,7 @@ published: 2025-07-25
 
 description: "最权威的联系方式"
 
-image: "https://pic.eo-php.afo.im/?img=h"
+image: "https://pic.2x.nz/?img=h"
 
 tags: ["QQ群", "Blog", "联系"]
 
