--- a/src/content/posts/guide/博客搭建教程.md
+++ b/src/content/posts/guide/博客搭建教程.md
@@ -1,10 +1,19 @@
 ---
+
 title: Fuwari静态博客搭建教程
-published: 2025-7-22
-description: '2025-7-22'
-image: './https://e5bf5984.cloudflare-imgbed-csc.pages.dev/file/1752714616777_DM_20250717090623_001.jpg'
-tags: [博客搭建]
-categories: '博客'
-draft: false 
-lang: ''
+
+published: 2025-07-25
+
+description: "最权威的联系方式"
+
+image: "https://e5bf5984.cloudflare-imgbed-csc.pages.dev/file/1752714616777_DM_20250717090623_001.jpg"
+
+tags: ["博客搭建", "Blog", "联系"]
+
+category: 博客搭建教程
+
+draft: false
+
+top: 1
+
 ---
