--- a/src/content/posts/guide/加入群聊.md
+++ b/src/content/posts/guide/加入群聊.md
@@ -6,7 +6,7 @@ published: 2025-07-25
 
 description: "最权威的联系方式"
 
-image: "https://pic.2x.nz/?img=h"
+image: "https://e5bf5984.cloudflare-imgbed-csc.pages.dev/file/1753665620441_微信图片_20250726115139.jpg"
 
 tags: ["QQ群", "Blog", "联系"]
 
